--- a/style.css
+++ b/style.css
@@ -15,6 +15,50 @@ body * + * {
     margin-top: 1.5em;
     }
 .container {
-    max-width: 1080px;
+    max-width: 780px;
     margin: 0 auto;
+    
     }
+    .form{
+        background-color: #282847;
+        padding: 20px;
+        border-radius: 0.5em;
+        
+    }
+
+    input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
+
+      
+      textarea{
+          width: 100%;
+      }
+
+      .features{
+        margin: 8px 0;
+        display: flex; 
+      }
+
+      input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      .checkbtn{
+          display: flex;
+          flex-direction: column;
+
+      }
