--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
     }
 body {
     background-image: url("/home/eldar/Desktop/project1/image/background_img.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     font-family: lato;
     color: #ffffff;
     }
@@ -23,7 +26,7 @@ body * + * {
         background-color: #282847;
         padding: 20px;
         border-radius: 0.5em;
-        
+        opacity: 0.9;
     }
 
     input[type=text], select {
