--- a/style.css
+++ b/style.css
@@ -14,16 +14,16 @@ body {
     font-family: lato;
     color: #ffffff;
     }
-body * + * {
+/*body * + * {
     margin-top: 1.5em;
-    }
+    }*/
 .container {
     max-width: 780px;
     margin: 0 auto;
     
     }
     .heading {
-        margin-left: 150px;
+        text-align: center;
     }
     h1{
         margin-left: 20px;
@@ -43,7 +43,6 @@ body * + * {
         width: 100%;
         padding: 12px 20px;
         margin: 6px 0 25px;
-        display: inline-block;
         border: 1px solid #ffffff;
         border-radius: 4px;
         box-sizing: border-box;
@@ -72,5 +71,9 @@ body * + * {
           flex-direction: column;
           margin: 5px 0 15px ;
           
+      }
+
+      .marginB{
+          margin-bottom: 1em;
       }
     
